# the-language

./: .#lang.js  .#makecode.js  .gitattributes  .gitignore  .gitlab-ci.yml  C.sh  Dockerfile  README.md  lang.js  lang.node.test.js  make.rkt  make.sh  makecode.js  mkdocs.yml  node.i.sh  node.mod.js  run.docker.sh  sandbox.install.sh  sandbox.sh  sandbox.upgrade.sh  test.rkt  test.sh  tool.build.docs.sh
builder-containers/docker/: Dockerfile  push.sh  run.sh
core/: .#lang.js  C.sh  README.md  a  lang.js  lang.node.test.js  lua  makecode.js  node.i.sh  node.test.sh
core/arch/: make  make.rkt  publish  publish.rkt  wasm
core/boot-library/: transform.sh
core/bootstrap-library/: make.rkt  make.sh  transform.js
core/ecmascript/: .gitignore  C.sh  beautify.sh  build-and-check.sh  compile.sh  init-path.sh  js-beautify  lang.js  lang.node.test.js  lang.ts  makecode.js  node  node.i.sh  node.test.sh  package.json  test.sh  ts-node.i.sh  tsconfig.json
core/lib/: transform.sh
core/lua/: compile.sh
core/lua_roblox-ts/: package.json  tsconfig.json
core/lua_typescript-to-lua/: package.json
core/pure/: Makefile  README.md  (+43 more)
core/pure/rust/the-language/: Cargo.toml
core/pure/rust/the-language/src/: lang.rs  lib.rs
core/pure/rust/the_lang/: Cargo.toml
core/pure/rust/the_lang/src/: lang.rs  lib.rs
core/pure/rust/the_lang/tests/: generated_tests.rs  test.rs
docs/: .gitignore  0-数据.md  _prelude.scrbl  build.sh  index.md  index.scrbl  数据.md  核心语言定义.scrbl
ununicode/: English-US.rkt  tools-update.rkt  ununicode.core.rkt  ununicode.langs.loader.rkt  ununicode.rkt
(+1642 files in other folders)
