[package]
name = "the-language"
version = "0.1.0"
authors = ["zaoqi <zaomir@outlook.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"
homepage = "https://the-language.ml/"
repository = "https://gitlab.com/the-language/the-language"
description = "TheLanguage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
