[package]
name = "the_lang"
version = "0.0.1"
authors = ["zaoqi <zaomir@outlook.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"
homepage = "https://the-language.ml/"
repository = "https://gitlab.com/the-language/the-language"
description = "TheLanguage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = 3

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3
